Move flash message container and use static positioning to keep it at the top
There will be additional work required to make this nicer, like auto-dismissing messages, or using js ot add a class to the top container so the toolbar can be bumped down so the flash doesn’t obscure it

--- a/stylesheets/_component.flash.scss
+++ b/stylesheets/_component.flash.scss
@@ -12,7 +12,7 @@
         z-index: $zindex-flash;
     }
 
-        &.is-sticky {
+    &.is-sticky {
         display: none; // Flashes should be hidden on page load, then animated in so the user sees them.
     }
 
@@ -23,6 +23,11 @@
             margin-right: $gutter-width / 2;
         }
     }
+}
+
+.flash h2 {
+    display: inline;
+    font-size: $font-size-base;
 }
 
 // Make sure sticky flashes appear over the breadcrumb
@@ -94,11 +99,8 @@
 }
 
 .flash-container {
-    clear: both;
-    top: -5px;
-    left: 0;
-    margin-bottom: 0;
-    position: relative;
-    width: auto;
+    left: $nav-primary-width;
+    position: fixed;
+    right: 0;
     z-index: $zindex-flash;
 }
