Improve panel markup to address WCAG and SR concerns

--- a/stylesheets/_component.panels.scss
+++ b/stylesheets/_component.panels.scss
@@ -7,6 +7,7 @@
     &__title {
         font-size: $font-size-xlarge;
         line-height: 32px;
+        margin-bottom: 0;
         padding: 8px 5px 0 10px;
 
         i::before {
