--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -1205,23 +1205,24 @@ data-*  | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import '@pulsar/pulsar/v2/helpers/util.html.twig' as util %}
 
     {% set actions_placements = ['inline', 'left', 'center', 'right'] %}
+    {% set guid = 'guid-' ~ random() %}
 
-    <div{{
+    <section{{
         attributes(options
-            |exclude('actions actions_placement icon title body')
+            |exclude('actions actions_placement heading_level icon title body')
             |defaults({
                 'class': 'panel'
             })
         )
-    }}>
+    }} aria-labelledby="{{ guid }}">
         {% if options.icon is defined and options.icon is not empty %}
             {{ html.icon(options.icon|default, { 'class': 'panel__icon' }) }}
         {% endif %}
 
         {% if options.title is defined and options.title is not empty %}
-        <div class="panel__title">
+        <{{ options.heading_level|default('h2') }} class="panel__title" id="{{ guid }}">
             {{ options.title|raw }}
-        </div>
+        </{{ options.heading_level|default('h2') }}>
         {% endif %}
         <div class="panel__body">
             {{- options.body|raw -}}
@@ -1242,7 +1243,7 @@ data-*  | string | Data attributes, eg: `'data-foo': 'bar'`
                 </div>
             {% endif %}
         </div>
-    </div>
+    </section>
 
 {% endspaceless %}
 {% endmacro %}
