Maks sure search box doesn’t push down too far

--- a/stylesheets/_component.search.scss
+++ b/stylesheets/_component.search.scss
@@ -12,7 +12,7 @@
 
     @include respond-min($screen-desktop) {
         //left: $nav-primary-width + $gutter-width;
-        margin: 0 0 20px;
+        margin: 0;
         //position: absolute;
         //top: 18px;
         clear: none;
