--- a/stylesheets/_component.toolbar.scss
+++ b/stylesheets/_component.toolbar.scss
@@ -11,7 +11,7 @@
         background-color: color(white);
         //height: 60px;
         margin-bottom: 0;
-        padding: 14px 20px;
+        padding: 14px 20px 0;
     }
 
     .dropdown {
