--- a/stylesheets/_component.panels.scss
+++ b/stylesheets/_component.panels.scss
@@ -5,6 +5,8 @@
     position: relative;
 
     &__title {
+        border: 0;
+        clear: none;
         font-size: $font-size-xlarge;
         line-height: 32px;
         margin-bottom: 0;
@@ -77,6 +79,10 @@
         .panel--#{$state} {
             background-color: $state-color;
             color: $state-color-alt;
+
+            .panel__title {
+                color: $state-color-alt;
+            }
 
             a,
             a:link,
