--- a/stylesheets/_component.search.scss
+++ b/stylesheets/_component.search.scss
@@ -11,10 +11,7 @@
     }
 
     @include respond-min($screen-desktop) {
-        //left: $nav-primary-width + $gutter-width;
-        margin: 0 0 20px;
-        //position: absolute;
-        //top: 18px;
+        margin: 0;
         clear: none;
     }
 }
