--- a/views/lexicon/tabs/buttons_labels.html.twig
+++ b/views/lexicon/tabs/buttons_labels.html.twig
@@ -17,9 +17,8 @@
     html.button_dropdown({
         'label': 'Drop Down',
         'items': [
-            html.link({
-                label: html.icon('print') ~ ' Print',
-                'class': 'is-disabled'
+            html.button({
+                label: html.icon('print') ~ ' Print'
             }),
             html.link({
                 label: html.icon('lock') ~ ' Lock',
