--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -10,6 +10,11 @@
 
     tbody > tr:hover {
         background-color: color(background, light);
+
+        [href],
+        .continuum-cms & [href]:link {
+            color: color(link, dark);
+        }
     }
 
     tr {
