First attempt at moving to flexbox layout in toolbar

--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -174,9 +174,9 @@
     border-radius: 4px;
     color: $nav-color-dark;
     display: inline-block;
-    //float: left;
+    // float: left;
     line-height: normal;
-    margin-top: 5px;
+    // margin-top: 5px;
     padding: 8px 14px 6px;
     text-decoration: none;
     -webkit-transition: all 200ms ease-in;
