--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -80,79 +80,84 @@
     {% block pageStyle %}{% endblock %}
 </head>
 <body class="language-html theme-slate">
-    {% include '@pulsar/pulsar/components/flash.html.twig' %}
+<a class="skip-link" href="#skip-target">Skip to main content</a>
 
 {% block body %}
-    <div class="container" id="top">
+    <div role="main" class="container" id="top">
         <div class="inner-wrapper">
             {{ nav.primary({ 'data': nav_data|default() }) }}
 
-            <header class="toolbar">
+            {% include '@pulsar/pulsar/components/flash.html.twig' %}
 
-                <button tabindex="2" class="mobile-menu-button t-mobile-menu-button" aria-expanded="false" aria-controls="aria-main-nav" aria-label="Toggle main menu">Menu</button>
+            <div class="toolbar">
 
-                {% block notifications %}{% endblock %}
-
-                <div class="nav-user">
-                {% block user_menu %}
-                {{
-                    html.button_dropdown({
-                        'parent_class': 'dropdown user-menu btn--naked',
-                        'label': 'Paul Stanton',
-                        'tabindex': '5',
-                        'items': [
-                            html.link({
-                                "label": html.icon('user') ~ " My details",
-                                "href": "#foo"
-                            }),
-                            html.link({
-                                "label": html.icon('key') ~ " Change password",
-                                "href": "#foo"
-                            }),
-                            html.divider(),
-                            html.link({
-                                "label": html.icon('power-off') ~ " Sign out",
-                                "href": "#foo"
-                            })
-                        ]
-                    })
-                }}
-                {% endblock %}
-                </div>
-
-                {% include '@pulsar/pulsar/components/nav_help.html.twig' %}
+                <button class="mobile-menu-button t-mobile-menu-button" aria-expanded="false" aria-controls="aria-main-nav" aria-label="Toggle main menu">Menu</button>
 
                 {% block search %}
                 <form action="/search" class="main-search" data-ui="search-box">
-                    <input type="search" tabindex="3" name="q" id="case-search" value="" placeholder="Search" title="search" class="main-search__field" autocomplete="off" aria-labelledby="search-submit">
-                    <button id="search-submit" tabindex="3" class="main-search__submit" type="submit" name="case-search"><i class="icon-search"><span class="hide">Search</span></i></button>
+                    <input type="search" name="q" id="case-search" value="" placeholder="Search" title="search" class="main-search__field" autocomplete="off" aria-labelledby="search-submit">
+                    <button id="search-submit" class="main-search__submit" type="submit" name="case-search"><i class="icon-search"><span class="hide">Search</span></i></button>
                 </form>
                 {% endblock %}
 
-                {{ nav.breadcrumbs(breadcrumbs|default) }}
 
-                {% set _ribbon = '' %}
-                {% set _ribbon = block('ribbon') %}
-                {% if _ribbon is empty %}
-                <h1 class="main-title">{{ heading|default('MISSING HEADING') }}</h1>
-                {% endif %}
+                <div class="toolbar-controls">
+                    {% include '@pulsar/pulsar/components/nav_help.html.twig' %}
 
-            </header>
+                    <div class="nav-user">
+                    {% block user_menu %}
+                    {{
+                        html.button_dropdown({
+                            'parent_class': 'dropdown user-menu btn--naked',
+                            'label': 'Paul Stanton',
+                            'items': [
+                                html.link({
+                                    "label": html.icon('user') ~ " My details",
+                                    "href": "#foo"
+                                }),
+                                html.link({
+                                    "label": html.icon('key') ~ " Change password",
+                                    "href": "#foo"
+                                }),
+                                html.divider(),
+                                html.link({
+                                    "label": html.icon('power-off') ~ " Sign out",
+                                    "href": "#foo"
+                                })
+                            ]
+                        })
+                    }}
+                    {% endblock %}
+                    </div>
+
+                    {% block notifications %}{% endblock %}
+                </div>
+
+            </div>
+
+            
 
             <div class="content-main">
                 <div class="tabs__content">
+                    {{ nav.breadcrumbs(breadcrumbs|default) }}
                     {% block header_actions %}{% endblock %}
+                    {% set _ribbon = '' %}
+                    {% set _ribbon = block('ribbon') %}
                     {% if _ribbon is not empty %}
                         {% block ribbon_content %}
                             <div class="ribbon-wrapper">
-                                <aside class="ribbon" aria-label="content summary">
+                                <header class="ribbon">
                                     {{ _ribbon|raw }}
-                                </aside>
+                                </header>
                             </div>
                         {% endblock %}
+                    {% else %}
+                        <h1 class="main-title">{{ heading|default('MISSING HEADING') }}</h1>
                     {% endif %}
                     {% block tabs_list %}{% endblock %}
-                    {% block tabs_content %}{% endblock %}
+                    <div id="skip-target">
+                        {% block tabs_content %}{% endblock %}
+                    </div>
                 </div>
             </div>
 
