--- a/stylesheets/_component.breadcrumb.scss
+++ b/stylesheets/_component.breadcrumb.scss
@@ -2,6 +2,7 @@
     color: color(gray, dark); // must be AA 4.5:1
     margin-bottom: 11px;
     font-size: $font-size-small;
+    width: 100%;
 
     a,
     a:link,
