--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -4,7 +4,7 @@
     {% import '@pulsar/pulsar/v2/helpers/html.html.twig' as html %}
 
 <nav class="nav-main" aria-label="Primary" id="aria-main-nav">
-    <a class="skip-link" href="#main-content" tabindex="1">Skip to main content</a>
+    <a class="skip-link" href="#main-content">Skip to main content</a>
     <div class="nav-primary t-nav-primary">
         <a href="{{ options.brand_link|default('#') }}" class="jadu-branding" aria-label="Home">
             <span class="jadu-logomark"><span class="hide">Return to home</span></span>
