--- a/views/pulsar/v2/helpers/flash.html.twig
+++ b/views/pulsar/v2/helpers/flash.html.twig
@@ -19,7 +19,7 @@
         {%
             if options.dismissable is not defined or options.dismissable == true
         %}
-            <button class="close" data-dismiss="flash" tabindex="1">
+            <button class="close" data-dismiss="flash">
                 {{ html.icon('remove', { 'label': 'Close' }) }}
             </button>
         {% endif %}
