Fix issue where sidebar width can be miscalculated when content is loaded in via ajax
Fixes an issue for XFP which results in a massive gap between the settings and the detail panels because of XFPs sticky settings javascript using the wrong width of the sidebar before the content has loaded in properly.

Closes #1013

--- a/stylesheets/_layout.settings.scss
+++ b/stylesheets/_layout.settings.scss
@@ -15,6 +15,7 @@
 
     @include respond-min($screen-medium) {
         margin-right: 1%;
+        max-width: 370px;
         min-width: 370px;
         width: 25%;
     }
