--- a/stylesheets/_component.loading.scss
+++ b/stylesheets/_component.loading.scss
@@ -69,6 +69,11 @@
     position: relative;
     width: 20px;
 
+    @include prefers-reduced-motion() {
+        height: auto;
+        width: auto;
+    }
+
     &.centered {
         display: block;
         margin: 0 auto;
@@ -95,6 +100,17 @@
     @include ie-lte(8) {
         border: 0;
         text-indent: 0;
+    }
+
+    @include prefers-reduced-motion() {
+        animation: none;
+        border: 0;
+        border-radius: 0;
+        float: none;
+        height: auto;
+        position: static;
+        text-indent: 0;
+        width: auto;
     }
 
     .lt-ie10 & {
