new mixin for reduced-motion styles/MQ

--- a/stylesheets/_mixin.media-queries.scss
+++ b/stylesheets/_mixin.media-queries.scss
@@ -41,3 +41,9 @@
         }
     }
 }
+
+@mixin prefers-reduced-motion() {
+    @media screen and (prefers-reduced-motion: reduce) {
+        @content;
+    }
+}
