reduced-motion styles and mark up changes to continumm sign in playground

--- a/views/playground/login/index.html.twig
+++ b/views/playground/login/index.html.twig
@@ -12,7 +12,7 @@
   <img src="../../../../images/video/galaxy.jpg" alt="galaxy background">
 </div>
 <!--<![endif]-->
-<div class="video" data-vide-bg="../../../../images/video/galaxy.mp4">
+<div class="video" id="video-bg" data-video-bg="../../../../images/video/galaxy.mp4" data-video-poster="../../../../images/video/galaxy.jpg">
 	<h1 class="signin-brand"><img src="../../../../images/branding/continuum-brandmark.svg" alt="Continuum Brandmark" /></h1>
 
 	<div class="signin-container">
