--- a/stylesheets/_component.dropzone.scss
+++ b/stylesheets/_component.dropzone.scss
@@ -261,14 +261,26 @@ $dropzone-icon-rotation: 30deg;
 
         .dropzone__icon--left {
             transform: rotate(-#{$dropzone-icon-rotation}) translateY(50%);
+
+            @include prefers-reduced-motion() {
+                transform: rotate(-#{$dropzone-icon-rotation}) translateY(75%);
+            }
         }
 
         .dropzone__icon--centre {
             transform: translateY(0) translateX(-50%);
+
+            @include prefers-reduced-motion() {
+                transform: translateX(-50%) translateY(25%);
+            }
         }
 
         .dropzone__icon--right {
             transform: rotate(#{$dropzone-icon-rotation}) translateY(50%);
+
+            @include prefers-reduced-motion() {
+                transform: rotate($dropzone-icon-rotation) translateY(75%);
+            }
         }
     }
 }
