--- a/stylesheets/_component.datatables.scss
+++ b/stylesheets/_component.datatables.scss
@@ -405,4 +405,9 @@ th.sorting_disabled:hover {
     }
 }
 
+// Prevent interactive elements in the original head from taking focus on tab
+.dataTables_scrollBody thead tr[role="row"] {
+    visibility: collapse;
+}
+
 // scss-lint:enable SelectorFormat
