Add branding assets for Jadu Deployer, and new jadu purple colour palette

--- a/stylesheets/_palette.base.scss
+++ b/stylesheets/_palette.base.scss
@@ -9,6 +9,11 @@
 \* -------------------------------------------------------------------------- */
 
 $palette-branding: (
+    jadu-purple: (
+        darkest:    rgb(46, 54, 112),
+        dark:       rgb(51, 60, 121),
+        base:       rgb(61, 71, 150)
+    ),
     jadu-red: (
         darkest:     rgb(115, 19, 19),
         dark:        rgb(154, 23, 23),
