Add light and pale variations of Jadu Purple

--- a/stylesheets/_palette.base.scss
+++ b/stylesheets/_palette.base.scss
@@ -11,8 +11,10 @@
 $palette-branding: (
     jadu-purple: (
         darkest:    rgb(46, 54, 112),
-        dark:       rgb(51, 60, 121),
-        base:       rgb(61, 71, 150)
+        dark:       rgb(52, 61, 128),
+        base:       rgb(61, 71, 150),
+        light:      rgb(86, 96, 173),
+        pale:       rgb(104, 113, 183)
     ),
     jadu-red: (
         darkest:     rgb(115, 19, 19),
