--- a/views/lexicon/tabs/colours.html.twig
+++ b/views/lexicon/tabs/colours.html.twig
@@ -260,7 +260,9 @@
         set jadu_purple = {
             "jadu-purple-darkest": "jadu-purple, darkest",
             "jadu-purple-dark": "jadu-purple, dark",
-            "jadu-purple-base": "jadu-purple"
+            "jadu-purple-base": "jadu-purple",
+            "jadu-purple-light": "jadu-purple, pale",
+            "jadu-purple-pale": "jadu-purple, light"
         }
     %}
 
