Use white-in-purple for all favicons

--- a/views/pulsar/components/favicons-deployer.html
+++ b/views/pulsar/components/favicons-deployer.html
@@ -13,7 +13,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/deployer/favicon-16x16.png">
 <link rel="manifest" href="/images/favicons/deployer/site.webmanifest">
 <link rel="shortcut icon" href="/images/favicons/deployer/favicon.ico">
-<meta name="msapplication-TileColor" content="#_d_c5172">
+<meta name="msapplication-TileColor" content="#3d4796">
 <meta name="msapplication-TileImage" content="/images/favicons/deployer/mstile-144x144.png">
 <meta name="msapplication-config" content="/images/favicons/deployer/browserconfig.xml">
-<meta name="theme-color" content="#333c79">
+<meta name="theme-color" content="#3d4796">
