--- a/stylesheets/_component.remove-button.scss
+++ b/stylesheets/_component.remove-button.scss
@@ -15,6 +15,8 @@
     }
 
     &:hover {
+        transform: none;
+
         [class^="icon-"],
         [class*=" icon-"] {
             color: color(black);
