--- a/views/lexicon/base.html.twig
+++ b/views/lexicon/base.html.twig
@@ -78,31 +78,35 @@
                         "href": "/app/app.php/lexicon/patterns/disabled-ui/"
                     },
                     "4.1.2": {
+                        "label": "Error Summary",
+                        "href": "/app/app.php/lexicon/patterns/error-summary/"
+                    },
+                    "4.1.3": {
                         "label": "Filters",
                         "href": "/app/app.php/lexicon/patterns/filters/"
                     },
-                    "4.1.3": {
+                    "4.1.4": {
                         "label": "Masterswitch",
                         "href": "/app/app.php/lexicon/patterns/masterswitch/"
                     },
-                    "4.1.4": {
+                    "4.1.5": {
                         "label": "No Results",
                         "href": "/app/app.php/lexicon/patterns/no-results/"
                     },
-                    "4.1.5": {
+                    "4.1.6": {
                         "label": "Reporting",
                         "href": "/app/app.php/lexicon/patterns/reporting/"
                     },
-                    "4.1.6": {
+                    "4.1.7": {
                         "label": "Rules",
                         "href": "/app/app.php/lexicon/patterns/rules/",
                     },
-                    "4.1.7": {
+                    "4.1.8": {
                         "label": "Settings",
                         "href": "/app/app.php/lexicon/patterns/settings/",
                         "aria-label": "Pattern Settings"
                     },
-                    "4.1.8": {
+                    "4.1.9": {
                         "label": "Table Detail",
                         "href": "/app/app.php/lexicon/patterns/table-detail/"
                     }
