--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -2471,7 +2471,7 @@ add-another-group-text  | string | The text content of the add another new entry
 
 # Error summary
 
-Generate a error summary that contains a list error messages relating to form inputs with errors. Each error message is an anchor to the respective input with errors.
+Generate a error summary that contains a list of error messages relating to form inputs with errors. Each error message is a link to the respective invalid input.
 
 ## Example usage
 
