--- a/views/lexicon/patterns/error-summary/index.html.twig
+++ b/views/lexicon/patterns/error-summary/index.html.twig
@@ -1,6 +1,6 @@
 {% extends '@pulsar/lexicon/base.html.twig' %}
 
-{% set heading = 'Error sumamry' %}
+{% set heading = 'Error Summary' %}
 
 {% set tab_one %}
     {% include '/lexicon/patterns/error-summary/error-summary.html.twig' %}
