--- a/views/lexicon/patterns/error-summary/error-summary.html.twig
+++ b/views/lexicon/patterns/error-summary/error-summary.html.twig
@@ -21,7 +21,7 @@
         })
     }}
 
-    {{ form.fieldset_start({'legend': 'Example for with errors'}) }}
+    {{ form.fieldset_start({'legend': 'Example form with errors'}) }}
 
         {{
             form.text({
