Workflow designer UI requirements

--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -338,6 +338,27 @@ td.table__form .rules + .form__group:last-of-type {
         bottom: 0;
     }
 
+    &.rules-container--linear {
+        border-left: 0;
+        padding-left: 0;
+
+        &::before {
+            background-color: color(gray, lightest);
+            height: calc(100% - 10px);
+            left: 45px;
+            top: 5px;
+            width: 4px;
+        }
+
+        &::after {
+            display: none;
+        }
+
+        .rule-link--and {
+            margin-left: 45px;
+        }
+    }
+
     .rule-link {
         position: relative;
         padding-top: 10px;
@@ -359,7 +380,7 @@ td.table__form .rules + .form__group:last-of-type {
             display: inline-block;
             margin-left: 25px;
             min-width: 50px;
-            padding: 8px 0;
+            padding: 8px;
             text-align: center;
 
             &:hover {
@@ -634,6 +655,21 @@ td.table__form .rules + .form__group:last-of-type {
 
         @include respond-min($screen-tablet) {
             color: color(text);
+        }
+    }
+
+}
+
+.rules-container--spaced {
+    .rule-block__controls {
+        margin-left: $padding-base;
+    }
+
+    .rule-block + .rule-block {
+        margin-top: $line-height-base;
+
+        .rule-block__header {
+            border-top: 0;
         }
     }
 }
