--- a/stylesheets/_layout.settings.scss
+++ b/stylesheets/_layout.settings.scss
@@ -226,11 +226,11 @@
  * Form toggle switches
  */
 
-.tab__settings .form__group--toggle > .control__label {
-    width: 100%;
+.tab__settings .form__group--toggle span.control__label {
+    width: calc(100% - 4em);
 
     @include respond-min($screen-small) {
-        padding-right: calc(4em + #{$padding-small-horizontal * 2});
+        // padding-right: calc(4em + #{$padding-small-horizontal * 2});
     }
 }
 
