increased font weight of error summary

--- a/stylesheets/_component.error-summary.scss
+++ b/stylesheets/_component.error-summary.scss
@@ -2,6 +2,7 @@
     background-color: color(white);
     border: 5px solid color(danger);
     color: color(text);
+    font-family: $font-family-regular;
     margin-bottom: $margin-base * 2;
     padding: $padding-base * 1.5;
 
