Add indeterminate styling to recently restyled checkboxes

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -594,6 +594,12 @@ fieldset {
         color: color(text);
         content: '\f00c';
     }
+
+    &:indeterminate::before {
+        color: color(text);
+        content: '\f068';
+        left: 3.5px;
+    }
 }
 
 .form__control.radio {
